--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 :root {
   /* colours */
-  --background-color: white;
+  --background-color: rgb(4, 0, 245);
   --text-color: black;
   --header-color: black;
 
